# palworld-save-editor

./: .gitignore  README.md  pyproject.toml  test_reader.py
.github/workflows/: notify.yml
backend/: __init__.py  app.py  main.py  parsers.py  save_reader.py
backend/routes/: __init__.py  health.py  load.py  pal_detail.py  pal_update.py  pals.py  players.py  save.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: Sidebar.vue
frontend/src/router/: index.ts
frontend/src/views/: DashboardView.vue  PalDetailView.vue  PalListView.vue
